--- a/FrontDesing/app/src/main/res/values/themes.xml
+++ b/FrontDesing/app/src/main/res/values/themes.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.TestApp" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.TestApp" parent="android:Theme.Material.Light.NoActionBar">
+        <item name="windowSplashScreenBackground">@color/white</item>
+        <item name="postSplashScreenTheme">@style/Theme.TestApp</item>
+    </style>
+
 </resources>
